加密保护/The Enigma Protector v2.33 Build 20110112/EnigmaSDK/VC/enigma_ide.h



typedef struct _TKeyCountries
{
  char* Name;
  int Code;
} TKeyCountries, *PKeyCountries;


typedef struct TWMContent {

    int   WMType;
    char* Name;
    int   NameLen;
    char* Text;
    int   TextLen;
    char* FileName;
    int   FileNameLen;
    char* AFile;
    int   AFileLen;

} TWMContent, *PWMContent;


typedef struct TKeyInformation {
	bool Stolen;               // {out} is key stolen
    DWORD CreationYear;        // {out} key creation year
    DWORD CreationMonth;       // {out} key creation month
    DWORD CreationDay;         // {out} key creation day
    bool UseKeyExpiration;     // {out} has key expiration date?
    DWORD ExpirationYear;      // {out} key expiration year
    DWORD ExpirationMonth;     // {out} key expiration month
    DWORD ExpirationDay;       // {out} key expiration day
    bool UseHardwareLocking;   // {out} hardware locked key
    bool UseExecutionsLimit;   // {out} limit key by executions?
    DWORD ExecutionsCount;     // {out} number of executions
    bool UseDaysLimit;         // {out} limit key by days?
    DWORD DaysCount;           // {out} number of days
    bool UseRunTimeLimit;      // {out} limit key by run time?
    DWORD RunTimeMinutes;      // {out} run time minutes
    bool UseGlobalTimeLimit;   // {out} limit key by global time?
    DWORD GlobalTimeMinutes;   // {out} global time minutes
    bool UseCountyLimit;       // {out} limit key by country?
    DWORD CountryCode;         // {out} country code
    bool UseRegisterAfter;     // {out} register key after date?
    DWORD RegisterAfterYear;   // {out} register after year
    DWORD RegisterAfterMonth;  // {out} register after month
    DWORD RegisterAfterDay;    // {out} register after day
    bool UseRegisterBefore;    // {out} register key before date?
    DWORD RegisterBeforeYear;  // {out} register before year
    DWORD RegisterBeforeMonth; // {out} register before month
    DWORD RegisterBeforeDay;   // {out} register before day
    bool EncryptedSections[NUMBER_OF_CRYPTED_SECTIONS]; // {out} Crypted sections
} TKeyInformation, *PKeyInformation;

// Registration API
BOOL __declspec(dllimport) __stdcall EP_RegSaveKey( char* Name, char* Key );

BOOL __declspec(dllimport) __stdcall EP_RegLoadKey( char** Name, char** Key );

BOOL __declspec(dllimport) __stdcall EP_RegCheckKey( char* Name, char* Key );

BOOL __declspec(dllimport) __stdcall EP_RegDeleteKey();

BOOL __declspec(dllimport) __stdcall EP_RegLoadAndCheckKey();

BOOL __declspec(dllimport) __stdcall EP_RegCheckAndSaveKey( char* Name, char* Key );

LPCTSTR __declspec(dllimport) __stdcall EP_RegHardwareID();

BOOL __declspec(dllimport) __stdcall EP_RegKeyCreationDate( int* Year, int* Month, int* Day );

BOOL __declspec(dllimport) __stdcall EP_RegKeyExpirationDate( int* Year, int* Month, int* Day );

int __declspec(dllimport) __stdcall EP_RegKeyCreationDateEx();

int __declspec(dllimport) __stdcall EP_RegKeyExpirationDateEx();

BOOL __declspec(dllimport) __stdcall EP_RegKeyExecutions( int* Total, int* Left );

int __declspec(dllimport) __stdcall EP_RegKeyExecutionsTotal();

int __declspec(dllimport) __stdcall EP_RegKeyExecutionsLeft();

BOOL __declspec(dllimport) __stdcall EP_RegKeyDays( int* Total, int* Left );

int __declspec(dllimport) __stdcall EP_RegKeyDaysTotal();

int __declspec(dllimport) __stdcall EP_RegKeyDaysLeft();

BOOL __declspec(dllimport) __stdcall EP_RegKeyRuntime( int* Total, int* Left );

int __declspec(dllimport) __stdcall EP_RegKeyRuntimeTotal();

int __declspec(dllimport) __stdcall EP_RegKeyRuntimeLeft();

BOOL __declspec(dllimport) __stdcall EP_RegKeyGlobalTime( int* Total, int* Left );

int __declspec(dllimport) __stdcall EP_RegKeyGlobalTimeTotal();

int __declspec(dllimport) __stdcall EP_RegKeyGlobalTimeLeft();

BOOL __declspec(dllimport) __stdcall EP_RegKeyRegisterAfterDate( int* Year, int* Month, int* Day );

int __declspec(dllimport) __stdcall EP_RegKeyRegisterAfterDateEx();

BOOL __declspec(dllimport) __stdcall EP_RegKeyRegisterBeforeDate( int* Year, int* Month, int* Day );

int __declspec(dllimport) __stdcall EP_RegKeyRegisterBeforeDateEx();

BOOL __declspec(dllimport) __stdcall EP_RegKeyInformation(char* AName, char* AKey, PKeyInformation AKeyInfo);

int __declspec(dllimport) __stdcall EP_RegKeyStatus();

int __declspec(dllimport) __stdcall EP_MiscCountryCode();

// Crypt API
int __declspec(dllimport) __stdcall EP_CryptHashBuffer( int Hash, byte* Buffer, int Size, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashFileA( int Hash, char* FileName, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashFileW( int Hash, wchar_t* FileName, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashStringA( int Hash, char* Str, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashStringW( int Hash, wchar_t* Str, byte* Digest);